8374959: [lworld] runtime/cds/appcds/cacheObject/ArchivedIntegerCacheTest.java fails with --enable-preview